# debugpy

./: .CodeQL.yml  .coveragerc  .flake8  .flake8.ci  .gitattributes  .gitignore  .pylintrc  .sonarcloud.properties  .travis.yml  CONTRIBUTING.md  DESCRIPTION.md  LICENSE  MANIFEST.in  Makefile  README.md  TEST_FAILURES.md  TROUBLESHOOTING.md  build_attach_binaries.py  cgmanifest.json  clean.cmd  debugpy.code-workspace  ptvsd.code-workspace  pydevconsole.py  pydevd_file_utils.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties  subrepo.py  test_requirements.txt  tests.yaml  tox.ini  versioneer.py
.devcontainer/: Dockerfile  devcontainer.json
.gdn/: .gdnsuppress
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/agents/: PythonSelfImproving.agent.md  PythonSelfImproving.selfEval.json
.github/instructions/: python-best-practices.instructions.md
.github/workflows/: attach_to_process.yml  codeql.yml  (+6 more)
_pydevd_bundle/: pydevd_comm.py  pydevd_cython.c  pydevd_frame.py  pydevd_traceproperty.py
_pydevd_frame_eval/: pydevd_frame_tracing.py
azure-pipelines/: exceptions.mdb  linux-coverage.yaml  linux_coverage.yaml  mac-coverage.yaml  pipelines.yaml  win-coverage.yaml
build_tools/: build.py
coverage/: README
debugger_protocol/: README.md  _base.py
doc/: Subprocess debugging.md
linux/: readme.md
ptvsd/: ThirdPartyNotices.txt  __init__.py  __main__.py  _local.py  _main.py  _remote.py  _util.py  attach_server.py  compat.py  daemon.py  debugger.py  exit_handlers.py  futures.py  ipcjson.py  messaging.py  multiproc.py  options.py  pathutils.py  pydevd_hooks.py  reraise.py  reraise2.py  reraise3.py  run_code.py  runner.py  safe_repr.py  session.py  socket.py  untangle.py  wrapper.py
pydev_ipython/: inputhook.py
pytests/: __init__.py  conftest.py  pytest.ini  requirements.txt  test_debugger.py  test_internals_filter.py  test_messaging.py  test_modules_manager.py  test_parse_args.py  test_pathutils.py  test_socket.py
tests/: __init__.py  __main__.py  code.py  colors.py  conftest.py  debug.py  debug_old.py  fake_pydevd.py  helpers.py  logs.py  net.py  pattern.py  print.py  printer.py  pydevd_log.py  pytest_fixtures.py  pytest_hooks.py  requirements.txt  requirements27.txt  requirements35.txt  stacks.py  start_methods.py  test_internals_filter.py  test_messaging.py  test_modules_manager.py  test_parse_args.py  test_safe_repr.py  test_setup.py  test_socket.py  test_test_main.py  test_tests___main__.py  timeline.md  timeline.py  watchdog.py
win/: build_all.ps1  build_plat.ps1  packages.config  sign.proj
(+950 files in other folders)
