[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
exclude = '''
( __pycache__
| ^/.tox
| ^/versioneer.py
| ^/src/debugpy/_vendored
| ^/src/debugpy/_version.py
)
'''

[tool.pyright]
pythonVersion = "3.7"
include = ["src"]
extraPaths = ["src/debugpy/_vendored/pydevd"]
ignore = ["src/debugpy/_vendored/pydevd", "src/debugpy/_version.py"]
